Ontology Mananger and Groot Update

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ FAILURE_PREDICTION_PUBLIC_PORT = 1500
 ONTOLOGY_MANAGER_PUBLIC_PORT = 8282
 RUNTIME_MONITORING_PUBLIC_PORT = 4700
 MUD_UPDATER_PUBLIC_PORT = 5555
+GROOT_PUBLIC_PORT = 8283
 
 # database connection used internally by the UI and Orchestrator.
 DB_USER = bieco
